--- a/frontend/unity-spa/features/tuition-years/list.html
+++ b/frontend/unity-spa/features/tuition-years/list.html
@@ -1,12 +1,12 @@
 <div class="p-6">
   <div class="flex items-center justify-between mb-4">
-    <h1 class="text-xl font-semibold text-gray-900">Tuition Years</h1>
+    <h1 class="text-xl font-semibold text-gray-900">Tuition Setup</h1>
     <button ng-click="vm.create()"
             class="inline-flex items-center px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium rounded-md shadow-sm transition">
       <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
       </svg>
-      New Tuition Year
+      New Tuition
     </button>
   </div>
 
@@ -18,7 +18,7 @@
           <path class="opacity-75" fill="currentColor"
             d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"></path>
         </svg>
-        <span class="text-sm text-gray-600">List of configured tuition years</span>
+        <span class="text-sm text-gray-600">List of configured Tuition</span>
       </div>
     </div>
 
